--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20241230.0",
-    "itty-router": "^5.0.18"
+    "itty-router": "^5.0.18",
+    "openai": "^4.77.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
