--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,8 @@ name = "billchill"
 compatibility_date = "2024-09-19"
 main = "src/api/index.ts"
 
+workers_dev = false
+
 [[migrations]]
 tag = "v1"
 new_classes = ["BillWsDurableObject"]
@@ -24,3 +26,4 @@ bucket_name = "billchill"
 directory = "./out/"
 not_found_handling = "single-page-application"
 binding = "ASSETS"
+
