--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,8 @@ main = "src/api/index.ts"
 
 workers_dev = false
 
+compatibility_flags = ["nodejs_compat"]
+
 [[migrations]]
 tag = "v1"
 new_classes = ["BillWsDurableObject"]
